[package]
name = "url_parser_derive"
version = "0.1.0-rc0"
authors = [
    "Awayume <dev@awayume.jp>",
]
edition = "2021"
rust-version = "1.70"
description = "Derive macros for url_parser."
documentation = ""
homepage = ""
repository = "https://github.com/Awayume/url_parser.rs"
license = "Apache-2.0"
keywords = [
    "http",
    "parser",
    "punycode",
    "query",
    "url",
]
categories = [
    "encoding",
    "network-programming",
    "parser-implementations",
    "web-programming",
]
publish = false


[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = { version = "2.0.36", features = ["full"] }


[dev-dependencies]
url_parser_trait = { version = "0.1.0-rc0", path = "../url_parser_trait" }
