[package]
name = "url_parser_trait"
version = "0.1.0-rc0"
authors = [
    "Awayume <dev@awayume.jp>",
]
edition = "2021"
rust-version = "1.70"
description = "Traits for url_parser."
documentation = ""
homepage = ""
repository = "https://github.com/Awayume/url_parser.rs"
license = "Apache-2.0"
keywords = [
    "http",
    "parser",
    "punycode",
    "query",
    "url",
]
categories = [
    "encoding",
    "network-programming",
    "parser-implementations",
    "web-programming",
]
publish = false


[dependencies]


[dev-dependencies]
